--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "authentication app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "telecom",
   "license": "ISC",
@@ -16,9 +17,9 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "moongose": "^1.0.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "bcryptjs": "^2.4.3"
   }
 }
