--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,17 @@
   "description": "authentication app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "telecom",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect": "^3.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +22,6 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.4",
-    "bcryptjs": "^2.4.3"
+    "server": "file:"
   }
 }
